--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nick-thompson/elementary": "^0.10.4",
     "@types/classnames": "^2.3.1",
+    "@types/nick-thompson__elementary": "^0.9.0",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
