--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
