fix: add gh-pages stuff

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "elementary_grid",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://teetow.github.io/elementary_grid",
   "dependencies": {
     "@nick-thompson/elementary": "^0.10.4",
     "@types/classnames": "^2.3.1",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
