--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "homepage": "https://teetow.github.io/elementary_grid",
   "dependencies": {
-    "@elemaudio/core": "^0.11.0",
+    "@elemaudio/core": "^1.0.0",
+    "@elemaudio/web-renderer": "^1.0.0",
     "@types/nick-thompson__elementary": "^0.9.0",
-    "@types/node": "^17.0.10",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "sass": "^1.43.4",
-    "typescript": "^4.4.4"
+    "sass": "^1.49.11",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
